--- a/Predicting Diabetes.ipynb
+++ b/Predicting Diabetes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,11 +1101,601 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting the data\n",
+    "70% for training, 30% for testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "feature_col_names = ['num_preg', 'glucose_conc', 'diastolic_bp', 'thickness', 'insulin', 'bmi', 'diab_pred', 'age']\n",
+    "predicted_class_names = ['diabetes']\n",
+    "\n",
+    "x = df[feature_col_names].values # predictor feature columns (0 X m)\n",
+    "y = df[predicted_class_names].values # predicted class (1 = true, 0 = false) column (1 X m)\n",
+    "split_test_size = 0.30\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size = split_test_size, random_state = 42) # test_size = 0.3 is 30%, 42 is the answer to everything"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We check to ensure we have the desired 70% train, 30% test split of the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69.92% in training set\n",
+      "30.08% in test set\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{0:0.2f}% in training set\".format((len(x_train)/len(df.index)) * 100))\n",
+    "print(\"{0:0.2f}% in test set\".format((len(x_test)/len(df.index)) * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verifying predicted value was split correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original True  : 268 (34.90%)\n",
+      "Original False : 500 (65.10%)\n",
+      "\n",
+      "Training True  : 188 (35.01%)\n",
+      "Training False : 349 (64.99%)\n",
+      "\n",
+      "Test True      : 80 (34.63%)\n",
+      "Test False     : 151 (65.37%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Original True  : {0} ({1:0.2f}%)\".format(len(df.loc[df['diabetes'] == 1]), (len(df.loc[df['diabetes'] == 1])/len(df.index)) * 100))\n",
+    "print(\"Original False : {0} ({1:0.2f}%)\".format(len(df.loc[df['diabetes'] == 0]), (len(df.loc[df['diabetes'] == 0])/len(df.index)) * 100))\n",
+    "print(\"\")\n",
+    "print(\"Training True  : {0} ({1:0.2f}%)\".format(len(y_train[y_train[:] == 1]), (len(y_train[y_train[:] == 1])/len(y_train) * 100.0)))\n",
+    "print(\"Training False : {0} ({1:0.2f}%)\".format(len(y_train[y_train[:] == 0]), (len(y_train[y_train[:] == 0])/len(y_train) * 100.0)))\n",
+    "print(\"\")\n",
+    "print(\"Test True      : {0} ({1:0.2f}%)\".format(len(y_test[y_test[:] == 1]), (len(y_test[y_test[:] == 1])/len(y_test) * 100.0)))\n",
+    "print(\"Test False     : {0} ({1:0.2f}%)\".format(len(y_test[y_test[:] == 0]), (len(y_test[y_test[:] == 0])/len(y_test) * 100.0)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post-split data preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hidden Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_preg</th>\n",
+       "      <th>glucose_conc</th>\n",
+       "      <th>diastolic_bp</th>\n",
+       "      <th>thickness</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>diab_pred</th>\n",
+       "      <th>age</th>\n",
+       "      <th>diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_preg  glucose_conc  diastolic_bp  thickness  insulin   bmi  diab_pred  \\\n",
+       "0         6           148            72         35        0  33.6      0.627   \n",
+       "1         1            85            66         29        0  26.6      0.351   \n",
+       "2         8           183            64          0        0  23.3      0.672   \n",
+       "3         1            89            66         23       94  28.1      0.167   \n",
+       "4         0           137            40         35      168  43.1      2.288   \n",
+       "\n",
+       "   age  diabetes  \n",
+       "0   50         1  \n",
+       "1   31         0  \n",
+       "2   32         1  \n",
+       "3   21         0  \n",
+       "4   33         1  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Are these 0 values possible? \n",
+    "\n",
+    "How many rows have unexpected 0 values? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# rows in dataframe 768\n",
+      "# rows missing glucose_conc: 5\n",
+      "# rows missing diastolic_bp: 35\n",
+      "# rows missing thickness: 227\n",
+      "# rows missing insulin: 374\n",
+      "# rows missing bmi: 11\n",
+      "# rows missing diab_pred: 0\n",
+      "# rows missing age: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"# rows in dataframe {0}\".format(len(df)))\n",
+    "print(\"# rows missing glucose_conc: {0}\".format(len(df.loc[df['glucose_conc'] == 0])))\n",
+    "print(\"# rows missing diastolic_bp: {0}\".format(len(df.loc[df['diastolic_bp'] == 0])))\n",
+    "print(\"# rows missing thickness: {0}\".format(len(df.loc[df['thickness'] == 0])))\n",
+    "print(\"# rows missing insulin: {0}\".format(len(df.loc[df['insulin'] == 0])))\n",
+    "print(\"# rows missing bmi: {0}\".format(len(df.loc[df['bmi'] == 0])))\n",
+    "print(\"# rows missing diab_pred: {0}\".format(len(df.loc[df['diab_pred'] == 0])))\n",
+    "print(\"# rows missing age: {0}\".format(len(df.loc[df['age'] == 0])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Impute the missing  data with the mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# impute with mean all 0 readings\n",
+    "fill_0 = SimpleImputer(missing_values=0, strategy = 'mean')\n",
+    "\n",
+    "x_train = fill_0.fit_transform(x_train)\n",
+    "x_test = fill_0.fit_transform(x_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Initial Algorithm - Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GaussianNB(priors=None, var_smoothing=1e-09)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "# create Gaussian Naive Bayes model object and train it with the data\n",
+    "nb_model = GaussianNB()\n",
+    "\n",
+    "nb_model.fit(x_train, y_train.ravel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performance on Training Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7542\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predict values using the training data\n",
+    "nb_predict_train = nb_model.predict(x_train)\n",
+    "\n",
+    "# import the performance metrics library\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "# Accuracy \n",
+    "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_train, nb_predict_train)))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performance on Testing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7359\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predict values using the testing data\n",
+    "nb_predict_test = nb_model.predict(x_test)\n",
+    "\n",
+    "# import the performance metrics library\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "# Accuracy \n",
+    "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_test, nb_predict_test)))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix\n",
+      "[[118  33]\n",
+      " [ 28  52]]\n",
+      "\n",
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.81      0.78      0.79       151\n",
+      "           1       0.61      0.65      0.63        80\n",
+      "\n",
+      "   micro avg       0.74      0.74      0.74       231\n",
+      "   macro avg       0.71      0.72      0.71       231\n",
+      "weighted avg       0.74      0.74      0.74       231\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion Matrix\")\n",
+    "print(\"{0}\".format(metrics.confusion_matrix(y_test, nb_predict_test)))\n",
+    "print(\"\")\n",
+    "\n",
+    "# Top row meaning: True Negative (118), False Positive (33)\n",
+    "# Bot row meaning: False Negative (28), True Positive (52)\n",
+    "\n",
+    "# Perfect results would look like (where there are no false results):\n",
+    "# Top row: 151, 0\n",
+    "# Bot row: 0, 80\n",
+    "\n",
+    "print(\"Classification Report\")\n",
+    "print(metrics.classification_report(y_test, nb_predict_test))\n",
+    "\n",
+    "# Looking at the 1 classification, the row in which the patients HAS diabetes:\n",
+    "# Recall = True Positive / (True Positive + False Negative), this value needs to be greater than .70\n",
+    "# Precision = True Positive / (True Positive + False Positive), how often the patient actually has diabetes (true positive) when the model says they will have diabetes.\n",
+    "    # * want to increase this number as well for performance improvement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Ensemble Algorithm - use multiple learning algorithms to obtain better predictive performance.\n",
+    "# Fits multiple trees with subsets of data\n",
+    "# Averages tree results to improve performance and control overfitting\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_model = RandomForestClassifier(random_state = 42)  # Create random forest object\n",
+    "rf_model.fit(x_train, y_train.ravel())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict Training Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9870\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_predict_train = rf_model.predict(x_train)\n",
+    "\n",
+    "# training metrics\n",
+    "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_train, rf_predict_train)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7100\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf_predict_test = rf_model.predict(x_test)\n",
+    "\n",
+    "# training metrics\n",
+    "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_test, rf_predict_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix\n",
+      "[[121  30]\n",
+      " [ 37  43]]\n",
+      "\n",
+      "Classification Report\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.77      0.80      0.78       151\n",
+      "           1       0.59      0.54      0.56        80\n",
+      "\n",
+      "   micro avg       0.71      0.71      0.71       231\n",
+      "   macro avg       0.68      0.67      0.67       231\n",
+      "weighted avg       0.70      0.71      0.71       231\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Confusion Matrix\")\n",
+    "print(\"{0}\".format(metrics.confusion_matrix(y_test, rf_predict_test)))\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"Classification Report\")\n",
+    "print(metrics.classification_report(y_test, rf_predict_test))\n",
+    "\n",
+    "# Recall and Precision are LOW!\n",
+    "\n",
+    "# What is happening?? Training data is nearly perfect at 98.7%! But testing data stinks..\n",
+    "\n",
+    "# The data must be OVERFIT (the model learned the training data too well)\n",
+    "\n",
+    "# The problem can be fixed with regularization hyperparameters (control how much algorithm focuses on precision)\n",
+    "# using regulization will decrase the accuracy of the training test data.. but will likely increase test data by fixing the overfit problem\n",
+    "# The bias variance trade off is that some perfection must be sacrificed for better performance\n",
+    "\n",
+    "# Switch algorithms to one that can be more finely tuned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# C is the regularization hyperparameter.. set to 0.7 as a starting guess\n",
+    "\n",
+    "lr_model = LogisticRegression(solver = 'liblinear', C = 0.7, random_state = 42)\n",
+    "lr_model.fit(x_train, y_train.ravel())\n",
+    "lr_predict_test = lr_model.predict(x_test)\n",
+    "\n",
+    "# training metrics\n",
+    "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_test, lr_predict_test)))\n",
+    "print(metrics.confusion_matrix(y_test, lr_predict_test))\n",
+    "print(\"\")\n",
+    "print(\"Classification Report\")\n",
+    "print(metrics.classification_report(y_test, lr_predict_test))"
+   ]
   }
  ],
  "metadata": {
