--- a/Predicting Diabetes.ipynb
+++ b/Predicting Diabetes.ipynb
@@ -1623,30 +1623,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix\n",
-      "[[121  30]\n",
-      " [ 37  43]]\n",
-      "\n",
-      "Classification Report\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.77      0.80      0.78       151\n",
-      "           1       0.59      0.54      0.56        80\n",
-      "\n",
-      "   micro avg       0.71      0.71      0.71       231\n",
-      "   macro avg       0.68      0.67      0.67       231\n",
-      "weighted avg       0.70      0.71      0.71       231\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Confusion Matrix\")\n",
     "print(\"{0}\".format(metrics.confusion_matrix(y_test, rf_predict_test)))\n",
@@ -1683,19 +1662,24 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# C is the regularization hyperparameter.. set to 0.7 as a starting guess\n",
-    "\n",
-    "lr_model = LogisticRegression(solver = 'liblinear', C = 0.7, random_state = 42)\n",
-    "lr_model.fit(x_train, y_train.ravel())\n",
-    "lr_predict_test = lr_model.predict(x_test)\n",
+    "lr_model =LogisticRegression(C=0.7, random_state=42)\n",
+    "lr_model.fit(X_train, y_train.ravel())\n",
+    "lr_predict_test = lr_model.predict(X_test)\n",
     "\n",
     "# training metrics\n",
     "print(\"Accuracy: {0:.4f}\".format(metrics.accuracy_score(y_test, lr_predict_test)))\n",
-    "print(metrics.confusion_matrix(y_test, lr_predict_test))\n",
+    "print(metrics.confusion_matrix(y_test, lr_predict_test) )\n",
     "print(\"\")\n",
     "print(\"Classification Report\")\n",
-    "print(metrics.classification_report(y_test, lr_predict_test))"
+    "print(metrics.classification_report(y_test, lr_predict_test))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
