--- a/Predicting Diabetes.ipynb
+++ b/Predicting Diabetes.ipynb
@@ -2028,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2045,6 +2045,338 @@
     "        # Slightly below 70% target\n",
     "        # Better performance on real world data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.externals import joblib  \n",
+    "joblib.dump(lr_cv_model, \"C:/Users/jdduval1/Desktop/pima-trained-model.pkl\")\n",
+    "\n",
+    "lr_cv_model = joblib.load(\"C:/Users/jdduval1/Desktop/pima-trained-model.pkl\")\n",
+    "\n",
+    "# Once the model is loaded we can use it to predict on some data.  In this case the data file contains a few rows from the original Pima CSV file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get data from truncated pima data file\n",
+    "\n",
+    "df_predict = pd.read_csv(\"C:/Users/jdduval1/Desktop/pima-data-trunc.csv\")\n",
+    "print(df_predict.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_preg</th>\n",
+       "      <th>glucose_conc</th>\n",
+       "      <th>diastolic_bp</th>\n",
+       "      <th>thickness</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>diab_pred</th>\n",
+       "      <th>age</th>\n",
+       "      <th>skin</th>\n",
+       "      <th>diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.9062</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>197</td>\n",
+       "      <td>70</td>\n",
+       "      <td>45</td>\n",
+       "      <td>543</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>53</td>\n",
+       "      <td>1.7730</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>30</td>\n",
+       "      <td>38</td>\n",
+       "      <td>83</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1.4972</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_preg  glucose_conc  diastolic_bp  thickness  insulin   bmi  diab_pred  \\\n",
+       "0         1            89            66         23       94  28.1      0.167   \n",
+       "1         2           197            70         45      543  30.5      0.158   \n",
+       "2         7           100             0          0        0  30.0      0.484   \n",
+       "3         1           103            30         38       83  43.3      0.183   \n",
+       "\n",
+       "   age    skin  diabetes  \n",
+       "0   21  0.9062     False  \n",
+       "1   53  1.7730      True  \n",
+       "2   32  0.0000      True  \n",
+       "3   33  1.4972     False  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_preg</th>\n",
+       "      <th>glucose_conc</th>\n",
+       "      <th>diastolic_bp</th>\n",
+       "      <th>thickness</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>diab_pred</th>\n",
+       "      <th>age</th>\n",
+       "      <th>diabetes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>197</td>\n",
+       "      <td>70</td>\n",
+       "      <td>45</td>\n",
+       "      <td>543</td>\n",
+       "      <td>30.5</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>53</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>32</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>103</td>\n",
+       "      <td>30</td>\n",
+       "      <td>38</td>\n",
+       "      <td>83</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>33</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_preg  glucose_conc  diastolic_bp  thickness  insulin   bmi  diab_pred  \\\n",
+       "0         1            89            66         23       94  28.1      0.167   \n",
+       "1         2           197            70         45      543  30.5      0.158   \n",
+       "2         7           100             0          0        0  30.0      0.484   \n",
+       "3         1           103            30         38       83  43.3      0.183   \n",
+       "\n",
+       "   age  diabetes  \n",
+       "0   21     False  \n",
+       "1   53      True  \n",
+       "2   32      True  \n",
+       "3   33     False  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The truncated file contained 4 rows from the original CSV.\n",
+    "# \n",
+    "# Data is the same is in same format as the original CSV file's data.  Therefore, just like the original data, we need to transform it before we can make predictions on the data.  \n",
+    "# \n",
+    "# Note: If the data had been previously \"cleaned up\" this would not be necessary.\n",
+    "# \n",
+    "# We do this by executed the same transformations as we did to the original data\n",
+    "# \n",
+    "# Start by dropping the \"skin\" which is the same as thickness, with different units.\n",
+    "\n",
+    "del df_predict['skin']\n",
+    "df_predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We need to drop the diabetes column since that is what we are predicting.  \n",
+    "# Store data without the column with the prefix X as we did with the X_train and X_test to indicate that it contains only the columns we are prediction.\n",
+    "\n",
+    "X_predict = df_predict\n",
+    "del X_predict['diabetes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Impute with mean all 0 readings\n",
+    "from sklearn.impute import SimpleImputer \n",
+    "fill_0 = SimpleImputer(missing_values=0, strategy=\"mean\")\n",
+    "X_predict = fill_0.fit_transform(X_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# At this point our data is ready to be used for prediction.  \n",
+    "\n",
+    "# ## Predict diabetes with the prediction data.  Returns 1 if True, 0 if false\n",
+    "\n",
+    "lr_cv_model.predict(X_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
